cronogram and gantt

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
       <!-- Contenido principal de tu página -->
       <section>
-        <h2>Matriz de Stakeholders del Proyecto</h2>
+        <h2>Stakeholders del Proyecto</h2>
         <p>
           En base a la información proporcionada en el caso, hemos elaborado una
           matriz de stakeholders para identificar a todas las partes interesadas
@@ -1452,10 +1452,10 @@
           <tbody>
             <tr>
               <td>1.1. Definición de requisitos</td>
+              <td>2</td>
               <td>4</td>
               <td>6</td>
-              <td>8</td>
-              <td>6</td>
+              <td>4</td>
             </tr>
             <tr>
               <td>1.2. Asignación de tareas iniciales</td>
@@ -1734,6 +1734,26 @@
             </tr>
           </tbody>
         </table>
+      </section>
+
+      <section class="subtitles">
+        <h2>Cronograma y Diagrama de Gantt</h2>
+        <p>
+          Se generó un cronograma detallado de actividades para el proyecto,
+          junto con la creación de un diagrama de Gantt. Las actividades se
+          asignaron a momentos específicos en el tiempo y se estableció su
+          secuencia. Se evaluaron las actividades que podrían llevarse a cabo en
+          paralelo, de acuerdo con la distribución de roles. El objetivo
+          principal es lograr una versión inicial del producto para el 15 de
+          Febrero de 2024.
+        </p>
+        <div class="container">
+          <a
+            href="https://estudianteccr-my.sharepoint.com/:x:/g/personal/ma_madrigal_estudiantec_cr/EYoec-u7kxFPmiQNwEclIBQBuxNwAaMlvQ-krThJOFMLhg?e=02HQvT"
+            class="styled-link"
+            >Enlace al Cronograma y Gantt</a
+          >
+        </div>
       </section>
     </main>
 
