--- a/index.html
+++ b/index.html
@@ -39,77 +39,186 @@
           <tbody>
             <tr>
               <td>Clientes del restaurante</td>
-              <td></td>
-              <td></td>
+              <td>
+                Aportan la demanda y la base de ingresos para el servicio de
+                entregas con drones. Su satisfacción y confianza en el servicio
+                contribuyen directamente a la reputación y el éxito continuo del
+                negocio
+              </td>
+              <td>
+                Obtener productos frescos y entregados de manera rápida y
+                eficiente. Buscan satisfacción en el servicio, comodidad y
+                eficiencia en las entregas.
+              </td>
             </tr>
             <tr>
               <td>Restaurantes</td>
-              <td></td>
-              <td></td>
+              <td>
+                Representan la base de usuarios que impulsará la demanda de la
+                aplicación de entregas y generará ingresos a través de los
+                servicios ofrecidos
+              </td>
+              <td>
+                Utilizar la tecnología de drones para mejorar la eficiencia en
+                la entrega de productos y ahorrar costos en comparación con los
+                métodos tradicionales
+              </td>
             </tr>
             <tr>
-              <td>Personal de mantenimiento</td>
-              <td></td>
-              <td></td>
+              <td>Personal de mantenimiento (mecanicos)</td>
+              <td>
+                Garantizan el funcionamiento adecuado de la flota de drones y su
+                disponibilidad para cumplir con las entregas
+              </td>
+              <td>
+                Mantener y asegurar que los drones estén en óptimas condiciones
+                para vuelos seguros y entregas eficientes
+              </td>
             </tr>
             <tr>
               <td>Sistema de Meteoro</td>
-              <td></td>
-              <td></td>
+              <td>
+                Proporcionan información esencial para optimizar la eficiencia y
+                seguridad de las operaciones de drones
+              </td>
+              <td>
+                Ofrecer servicios y datos climáticos para mejorar la
+                planificación y seguridad de los vuelos de drones
+              </td>
             </tr>
             <tr>
-              <td>Sistema Digi-Control</td>
-              <td></td>
-              <td></td>
+              <td>Sistema Digi-Control (Aviación Civil)</td>
+              <td>
+                Supervisan y regulan la operación de los drones, brindando el
+                marco legal necesario para su funcionamiento seguro
+              </td>
+              <td>
+                Garantizar la seguridad y regulación de las operaciones de
+                drones en el espacio aéreo, asegurando el cumplimiento de las
+                normativas y regulaciones
+              </td>
             </tr>
             <tr>
               <td>Sistema Digi-Vuelo</td>
-              <td></td>
-              <td></td>
+              <td>
+                Al calcular y optimizar la distancia, peso del producto y tiempo
+                de vuelo, el sistema Digi-Vuelo asegura que las entregas se
+                realicen de manera eficiente y puntual, ahorrando tiempo y
+                recursos
+              </td>
+              <td>
+                Busca optimizar la planificación y ejecución de vuelos de
+                drones, minimizando el consumo de batería y maximizando la
+                eficiencia en la entrega de productos
+              </td>
             </tr>
             <tr>
               <td>Inversionistas</td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Aviación civil</td>
-              <td></td>
-              <td></td>
+              <td>
+                Proporcionan el capital inicial necesario para el desarrollo,
+                producción y expansión de los drones y la aplicación de entrega
+              </td>
+              <td>
+                Obtener un retorno de inversión y ganancias a través de SkyEats
+              </td>
             </tr>
             <tr>
               <td>Proveedores de drones</td>
-              <td></td>
-              <td></td>
+              <td>
+                Proveen los componentes clave que hacen posible la tecnología de
+                drones y su capacidad de vuelo prolongado
+              </td>
+              <td>
+                Contribuir a la fabricación de los drones, y posiblemente
+                expandir su mercado a través de colaboraciones
+              </td>
             </tr>
             <tr>
-              <td>Equipo de desarrollo y mantenimiento del sistema</td>
-              <td></td>
-              <td></td>
+              <td>Equipo de desarrollo Digi-Entrega</td>
+              <td>
+                Aportan el conocimiento técnico y la innovación en el campo de
+                los drones
+              </td>
+              <td>
+                Desarrollar y perfeccionar la tecnología de drones, asegurando
+                su eficiencia, seguridad y rendimiento
+              </td>
+            </tr>
+            <tr>
+              <td>Personal de mantenimiento</td>
+              <td>
+                Garantizan el funcionamiento adecuado de la flota de drones y su
+                disponibilidad para cumplir con las entregas
+              </td>
+              <td>
+                Mantener y asegurar que los drones estén en óptimas condiciones
+                para vuelos seguros y entregas eficientes
+              </td>
             </tr>
             <tr>
               <td>Usuarios finales (empleados del restaurante)</td>
-              <td></td>
-              <td></td>
+              <td>
+                Utilizan la tecnología de drones para mejorar el proceso de
+                entrega de alimentos, lo que aumenta la eficiencia de su trabajo
+              </td>
+              <td>
+                Facilitar las entregas de manera eficiente y rápida, asegurando
+                que los pedidos lleguen a su destino en buenas condiciones y en
+                el tiempo previsto
+              </td>
             </tr>
             <tr>
               <td>Proveedores de internet (ISP)</td>
-              <td></td>
-              <td></td>
+              <td>
+                Ofrecen acceso a internet que permite la comunicación en tiempo
+                real entre las aplicaciones de entregas, el sistema de control
+                de vuelo y otros sistemas externos
+              </td>
+              <td>
+                Proporcionar conectividad estable y confiable para garantizar la
+                comunicación fluida entre los sistemas y las aplicaciones
+                involucradas en la operación de los drones
+              </td>
             </tr>
             <tr>
               <td>Proveedores de plataforma (PaaS)</td>
-              <td></td>
-              <td></td>
+              <td>
+                Suministran tecnología, software y hardware esenciales, que
+                permiten el funcionamiento efectivo de los drones y su
+                integración con la aplicación de entregas
+              </td>
+              <td>
+                Contribuir con soluciones tecnológicas y equipos que optimicen
+                la operación de los drones y mejoren su eficiencia
+              </td>
             </tr>
             <tr>
               <td>Reguladores y organismos de control</td>
-              <td></td>
-              <td></td>
+              <td>
+                Proporcionan regulaciones y leyes que permiten la operación
+                segura y eficiente de los drones en el espacio aéreo, asimismo,
+                fomentan el crecimiento de nuevas empresas que usen esta
+                tecnología.
+              </td>
+              <td>
+                Garantizar la seguridad y el orden en el espacio aéreo, así como
+                fomentar la innovación tecnológica en el país.
+              </td>
             </tr>
             <tr>
               <td>Empresas de seguros</td>
-              <td></td>
+              <td>
+                Proporcionan pólizas de seguro especializadas que cubren daños y
+                responsabilidad en caso de accidentes, lo que brinda
+                tranquilidad tanto a la empresa de drones como a sus clientes en
+                caso de incidentes inesperados
+              </td>
+              <td>
+                Garantizar la seguridad y mitigar los riesgos asociados con la
+                operación de drones, minimizar las posibles pérdidas financieras
+                derivadas de daños a los drones, accidentes o interrupciones en
+                las entregas
+              </td>
             </tr>
           </tbody>
         </table>
@@ -1749,11 +1858,17 @@
         </p>
         <div class="container">
           <a
-            href="https://estudianteccr-my.sharepoint.com/:x:/g/personal/ma_madrigal_estudiantec_cr/EYoec-u7kxFPmiQNwEclIBQBuxNwAaMlvQ-krThJOFMLhg?e=02HQvT"
+            href="https://estudianteccr-my.sharepoint.com/:x:/r/personal/ma_madrigal_estudiantec_cr/Documents/Documentos/TEC/2023_II/Caso%202/Cronograma/Cronograma%202.xlsx?d=web731e8a93bb4f119a240dc047252014&csf=1&web=1&e=xgo4UV"
             class="styled-link"
+            target="_blank"
             >Enlace al Cronograma y Gantt</a
           >
         </div>
+        <img
+          src="images/cronograma.png"
+          alt="Cronograma y Gantt"
+          class="imagen-personalizada"
+        />
       </section>
     </main>
 
