--- a/index.html
+++ b/index.html
@@ -16,6 +16,41 @@
     <main>
       <!-- Contenido principal de tu página -->
       <section>
+        <h2>Información de Nuestra Empresa y Equipo de Trabajo</h2>
+        <p>
+          A continuación, encontrará los detalles esenciales del talentoso
+          equipo que conforma nuestra empresa. Hemos trabajado juntos para dar
+          vida al proyecto RepartDrone.
+        </p>
+
+        <table>
+          <tr>
+            <td>Nombre de la empresa</td>
+            <td>SkyEats S.A</td>
+          </tr>
+          <tr>
+            <td>Nombre del grupo</td>
+            <td>D-Devs</td>
+          </tr>
+          <tr>
+            <td>Integrante 1</td>
+            <td>Alejandro Benavides Juárez</td>
+          </tr>
+          <tr>
+            <td>Integrante 2</td>
+            <td>Juan Daniel Rodríguez Montero</td>
+          </tr>
+          <tr>
+            <td>Integrante 3</td>
+            <td>Octavio Sánchez Soto</td>
+          </tr>
+          <tr>
+            <td>Integrante 4</td>
+            <td>Mariela Madrigal Meneses</td>
+          </tr>
+        </table>
+      </section>
+      <section>
         <h2>Stakeholders del Proyecto</h2>
         <p>
           En base a la información proporcionada en el caso, hemos elaborado una
@@ -220,6 +255,38 @@
                 las entregas
               </td>
             </tr>
+            <tr>
+              <td>Community Manager</td>
+              <td>
+                Interacción en Línea (redes sociales), comercialización de
+                Digi-Entrega de SkyEats
+              </td>
+              <td>
+                Mantener una comunidad activa en redes sociales, interactuando
+                con los usuarios, respondiendo preguntas, comentarios y
+                promoviendo la marca
+              </td>
+            </tr>
+            <tr>
+              <td>Personal Administrativo</td>
+              <td>Las funciones operativas de la empresa</td>
+              <td>
+                Asegurarse de que los procesos administrativos se realicen de
+                manera eficiente, mantener registros, gestionar recursos y
+                contribuir a la optimización general de las operaciones de la
+                empresa
+              </td>
+            </tr>
+            <tr>
+              <td>Personal de Atención al Cliente</td>
+              <td>Satisfacer a los clientes</td>
+              <td>
+                Garantizar que los clientes tengan experiencias positivas,
+                resolviendo sus necesidades y preocupaciones de manera efectiva
+                para construir relaciones duraderas y fortalecer la reputación
+                de la empresa
+              </td>
+            </tr>
           </tbody>
         </table>
       </section>
@@ -261,8 +328,8 @@
               <td>2</td>
               <td>C</td>
               <td>Serio</td>
-              <td></td>
-              <td></td>
+              <td>Juan, Alejandro</td>
+              <td>13/09/2023</td>
             </tr>
             <tr>
               <td>R002</td>
@@ -274,8 +341,8 @@
               <td>1</td>
               <td>D</td>
               <td>Serio</td>
-              <td></td>
-              <td></td>
+              <td>Octavio, Mariela, con Mercadeo</td>
+              <td>Contínuo</td>
             </tr>
             <tr>
               <td>R003</td>
@@ -287,8 +354,8 @@
               <td>2</td>
               <td>C</td>
               <td>Serio</td>
-              <td></td>
-              <td></td>
+              <td>Octavio, Mariela, con Mercadeo</td>
+              <td>Contínuo</td>
             </tr>
             <tr>
               <td>R004</td>
@@ -302,8 +369,8 @@
               <td>3</td>
               <td>D</td>
               <td>Medio</td>
-              <td></td>
-              <td></td>
+              <td>Juan, Alejandro</td>
+              <td>13/09/2023</td>
             </tr>
             <tr>
               <td>R005</td>
@@ -315,8 +382,8 @@
               <td>1</td>
               <td>E</td>
               <td>Medio</td>
-              <td></td>
-              <td></td>
+              <td>Juan, Alejandro</td>
+              <td>13/09/2023</td>
             </tr>
             <tr>
               <td>R006</td>
@@ -328,8 +395,8 @@
               <td>2</td>
               <td>D</td>
               <td>Medio</td>
-              <td></td>
-              <td></td>
+              <td>Juan, Alejandro</td>
+              <td>11/11/2023</td>
             </tr>
             <tr>
               <td>R007</td>
@@ -344,8 +411,8 @@
               <td>2</td>
               <td>D</td>
               <td>Medio</td>
-              <td></td>
-              <td></td>
+              <td>Juan, Alejandro, con RRHH</td>
+              <td>Contínuo</td>
             </tr>
             <tr>
               <td>R008</td>
@@ -360,8 +427,8 @@
               <td>2</td>
               <td>E</td>
               <td>Medio</td>
-              <td></td>
-              <td></td>
+              <td>Juan, Alejandro</td>
+              <td>Contínuo</td>
             </tr>
             <tr>
               <td>R009</td>
@@ -369,12 +436,15 @@
               <td>1</td>
               <td>C</td>
               <td>Alto</td>
-              <td>Colocar planta que funcione con combustible</td>
+              <td>
+                Colocar planta que funcione con combustible, incluyendo plan de
+                mantenimiento para la misma
+              </td>
               <td>1</td>
               <td>F</td>
               <td>Eliminado</td>
-              <td></td>
-              <td></td>
+              <td>Juan, Alejandro</td>
+              <td>13/09/2023</td>
             </tr>
             <tr>
               <td>R010</td>
@@ -390,8 +460,8 @@
               <td>3</td>
               <td>D</td>
               <td>Medio</td>
-              <td></td>
-              <td></td>
+              <td>Octavio con asesoría jurídica</td>
+              <td>20/09/2023</td>
             </tr>
             <tr>
               <td>R011</td>
@@ -403,8 +473,8 @@
               <td>4</td>
               <td>B</td>
               <td>Medio</td>
-              <td></td>
-              <td></td>
+              <td>Juan, Alejandro</td>
+              <td>13/09/2023</td>
             </tr>
             <tr>
               <td>R012</td>
@@ -419,8 +489,8 @@
               <td>3</td>
               <td>E</td>
               <td>Medio</td>
-              <td></td>
-              <td></td>
+              <td>Mariela, Alejandro</td>
+              <td>19/01/2024</td>
             </tr>
             <tr>
               <td>R013</td>
@@ -432,7 +502,63 @@
               <td>4</td>
               <td>D</td>
               <td>Bajo</td>
-              <td></td>
+              <td>Juan, Alejandro</td>
+              <td>11/11/2023</td>
+            </tr>
+            <tr>
+              <td>R014</td>
+              <td>
+                No cumplir adecuadamente con el pedido por tener peso superior a
+                la capacidad del Dron.
+              </td>
+              <td>4</td>
+              <td>B</td>
+              <td>Medio</td>
+              <td>
+                Agregar validador de peso e informar del límite por dron y la
+                cantidad de drones que se requieren para completar la carga
+              </td>
+              <td>4</td>
+              <td>F</td>
+              <td>Eliminado</td>
+              <td>Mariela, Alejandro</td>
+              <td>19/01/2024</td>
+            </tr>
+            <tr>
+              <td>R015</td>
+              <td>
+                Algún miembro del equipo renuncia, es despedido o trabaja de
+                forma ineficiente
+              </td>
+              <td>3</td>
+              <td>B</td>
+              <td>Serio</td>
+              <td>
+                Monitorear satisfacción del personal y realizar pruebas en el
+                proceso de contratación, no centralizar el conocimiento.
+              </td>
+              <td>2</td>
+              <td>D</td>
+              <td>Medio</td>
+              <td>Octavio, Mariela con RRHH</td>
+              <td>Contínuo</td>
+            </tr>
+            <tr>
+              <td>R016</td>
+              <td>Todo el equipo renuncia de forma simultánea</td>
+              <td>1</td>
+              <td>D</td>
+              <td>Serio</td>
+              <td>
+                Mantener programa de incentivos y seguimiento al bienestar de
+                las personas trabajadoras. Mantener auditoría para la
+                documentación.
+              </td>
+              <td>1</td>
+              <td>E</td>
+              <td>Medio</td>
+              <td>Octavio, Mariela con RRHH y auditoría</td>
+              <td>Contínuo</td>
             </tr>
           </tbody>
         </table>
@@ -1858,7 +1984,7 @@
         </p>
         <div class="container">
           <a
-            href="https://estudianteccr-my.sharepoint.com/:x:/r/personal/ma_madrigal_estudiantec_cr/Documents/Documentos/TEC/2023_II/Caso%202/Cronograma/Cronograma%202.xlsx?d=web731e8a93bb4f119a240dc047252014&csf=1&web=1&e=xgo4UV"
+            href="https://estudianteccr-my.sharepoint.com/:x:/g/personal/ma_madrigal_estudiantec_cr/EYoec-u7kxFPmiQNwEclIBQBuxNwAaMlvQ-krThJOFMLhg?e=A1BVD7&nav=MTVfezAwMDAwMDAwLTAwMDEtMDAwMC0wMDAwLTAwMDAwMDAwMDAwMH0"
             class="styled-link"
             target="_blank"
             >Enlace al Cronograma y Gantt</a
@@ -1868,6 +1994,7 @@
           src="images/cronograma.png"
           alt="Cronograma y Gantt"
           class="imagen-personalizada"
+          id="imagen-grafico"
         />
       </section>
     </main>
